--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@apollo/server": "^4.11.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "busboy": "^1.6.0",
@@ -14,10 +15,10 @@
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.21.1",
     "express-list-endpoints": "^7.1.0",
     "express-session": "^1.18.0",
-    "form-data": "^4.0.0",
+    "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
