--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/service-worker": "^17.2.0",
+    "@apollo/client": "^3.0.0",
+    "@types/extract-files": "^13.0.1",
+    "apollo-angular": "^7.2.0",
+    "extract-files": "^13.0.0",
+    "graphql": "^16",
     "protractor": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
